<resources>
    <string name="app_name">MotherLoad Orleans</string>
    <string name="mauvaise_identifiants">Mauvais identifiants</string>
    <string-array name="languages" >
        <item>Français</item>
        <item>English</item>
    </string-array>
    <string name="title_activity_connexion">Connexion</string>
    <string name="connexion_pas_de_connexion">Pas de connexion ou champs vides</string>
    <string name="connexion_username">Identifiant</string>
    <string name="connexion_password">Mot de passe</string>
    <string name="text_btn_connexion">Connexion</string>
    <string name="text_player_name">Nom du joueur</string>
    <string name="text_pieces">Pieces</string>
    <string name="text_pioche_actuelle">Pioche actuelle</string>
    <string name="title_activity_settings">Parametres</string>
    <string name="title_activity_market">Marché</string>
    <string name="title_activity_invent">Inventaire</string>
    <string name="text_name">Nom</string>
    <string name="text_type">Type</string>
    <string name="text_prix">Prix</string>
    <string name="text_qte">Quantité</string>
    <string name="btn_achete">Acheter</string>
    <string name="text_btn_moi">Moi</string>
    <string name="btn_deconnexion">Deconnexion</string>
    <string name="btn_reset">Reinitialiser le compte</string>
    <string name="text_langue">Langage</string>
    <string name="text_valider">Valider</string>
    <string name="text_depth">Profondeur</string>
    <string name="message_confirmation">Etes-vous sur ?</string>
    <string name="text_oui">Oui</string>
    <string name="text_non">Non</string>
    <string name="text_connexion_perdue">Connexion perdue</string>
    <string name="text_session_exp">Session expiré</string>
    <string name="text_session_invalide">Session invalide</string>
    <string name="erreur_serveur">Il y a eu un probleme avec le seveur</string>
    <string name="debut_desc_voisin">salut, je suis à</string>
    <string name="fin_desc_voisin">mètres de toi</string>
    <string name="msg_reset">Votre compte a bien été reinitialisé</string>
    <string name="msg_change_name">Votre nouveau nom maintenant est</string>
    <string name="msg_pb_select">Il y a un probleme de selection, veuillez reselectionner votre offre</string>
    <string name="msg_no_money">Vous n\'avez pas assez d\'argent</string>
    <string name="text_pour">pour</string>
    <string name="msg_achat">Vous venez d\'acheter</string>
    <string name="text_msg_localisation">Veuillez autoriser la localisation</string>
    <string name="text_new_prof">Nouvelle profondeur</string>
    <string name="text_sec">secondes</string>
    <string name="text_debut_no_item">Prochaine action possible dans</string>
    <string name="text_best_pickaxe_req">Meilleure pioche requise</string>
    <string name="text_out_area">Vous êtes hors zone</string>
    <string name="text_max_pick">Pioche maximum atteinte</string>
    <string name="text_cur_pick">Pioche actuelle</string>
    <string name="text_erreur">Erreur</string>
    <string name="text_pioche_amel">Pioche améliorée</string>
    <string name="text_item_manquant">Items manquants</string>
    <string name="msg_vente">Vous venez de vendre</string>
    <string name="msg_qte_sup">La quantité est superieur a la quantité disponible</string>
    <string name="msg_vent_prob">Il y a eu un probleme avec la vente</string>
    <string name="msg_prix_min">Prix de vente minimum</string>
    <string name="msg_stock_vide">Votre stock est vide</string>
    <string name="msg_champs_vide">il y a des champs vides</string>
    <string name="text_nouvel_item">Nouvel Item</string>
    <string name="text_vendre">Vendre</string>
    <string name="text_recette">Recette prochaine pioche</string>
    <string name="text_miner_req">Minerais requis</string>
    <string name="text_redemarer">et redemarrer l\'application</string>
</resources>