<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_margin="5dp"
    android:orientation="horizontal"
    android:background="@drawable/custom_item_liste"
    android:backgroundTint="@color/black"
    android:padding="10dp">

    <ImageView
        android:id="@+id/img_item"
        android:layout_width="78dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:adjustViewBounds="true"
        android:maxWidth="75dp"
        android:maxHeight="75dp"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="7dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_content"
            android:textSize="13dp"
            android:text="@string/text_name" />

        <TextView
            android:id="@+id/type_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_content"
            android:textSize="13dp"
            android:text="@string/text_type" />

        <TextView
            android:id="@+id/qte_item"
            android:fontFamily="@font/font_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:text="@string/text_qte" />

    </LinearLayout>

</LinearLayout>