<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".views.Connexion">

    <TextView
        android:id="@+id/textView"
        android:layout_width="346dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/font_title"
        android:gravity="center"
        android:text="@string/title_activity_connexion"
        android:textColor="@color/white"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_connexion"
        android:layout_width="179dp"
        android:layout_height="52dp"
        android:layout_marginTop="60dp"
        android:text="@string/text_btn_connexion"
        android:fontFamily="@font/font_content"
        android:backgroundTint="@color/blue"
        android:background="@drawable/custom_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="266dp"
        android:layout_height="43dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/custum_input"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:ems="10"
        android:hint="@string/connexion_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user" />

    <EditText
        android:id="@+id/user"
        android:layout_width="266dp"
        android:layout_height="43dp"
        android:layout_marginTop="248dp"
        android:background="@drawable/custum_input"
        android:drawableStart="@drawable/ic_username"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/connexion_username"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>