<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".views.Parametre">

    <TextView
        android:id="@+id/parametre_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/font_title"
        android:gravity="center"
        android:text="@string/title_activity_settings"
        android:textColor="@color/white"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toEndOf="@+id/parametre_retour"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/parametre_retour"
        android:layout_width="45dp"
        android:layout_height="39dp"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_border"
        android:gravity="center"
        android:scaleType="fitCenter"
        android:src="@drawable/img_retour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_deconnexion"
        android:layout_width="367dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_border"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/font_content"
        android:text="@string/btn_deconnexion"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/name_player"
        android:layout_width="220dp"
        android:layout_height="47dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/custum_input"
        android:ems="10"
        android:hint="@string/text_name"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_deconnexion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parametre_name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/spin_lang"
        android:layout_width="72dp"
        android:layout_height="33dp"
        android:fontFamily="@font/font_content"
        android:gravity="center"
        android:text="@string/text_langue"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parametre_title"
        app:layout_constraintVertical_bias="0.032" />

    <TextView
        android:id="@+id/parametre_name"
        android:layout_width="54dp"
        android:layout_height="39dp"
        android:fontFamily="@font/font_content"
        android:gravity="center"
        android:text="@string/text_name"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_language" />

    <Button
        android:id="@+id/btn_change_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:background="@drawable/custom_border"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/font_content"
        android:text="@string/text_valider"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_player"
        app:layout_constraintVertical_bias="0.024" />

    <Button
        android:id="@+id/reinisialiser"
        android:layout_width="367dp"
        android:layout_height="48dp"
        android:background="@drawable/custom_border"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:text="@string/btn_reset"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_deconnexion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_player"
        app:layout_constraintVertical_bias="0.96" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_language"
        android:layout_width="44dp"
        android:layout_height="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spin_lang" />

</androidx.constraintlayout.widget.ConstraintLayout>